# cpu-game

./: Cargo.toml  example.cpp  font.md  full-shader.md  new-shader.md  objectplan.md  tilemap_editor.html
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
aseprite/: floor.milkveins.aseprite  floor.smooth.aseprite  impact.spiral.aseprite  item.health.aseprite  projectile.spiral.aseprite
crates/cpu-presenter/: Cargo.toml  README.md
crates/cpu-presenter/src/: lib.rs  renderer.rs
crates/cpu-presenter/src/blit/: blit.wgsl  mod.rs
crates/cpu-presenter/src/composite/: colorspace.rs  filters.rs  lanczos.rs  mod.rs  nearest.rs  params.rs  pass1.rs  pass2.rs
crates/engine-core/src/: lib.rs
crates/presenter/: .gitmodules  Cargo.toml  build.rs
crates/presenter/.cursor/rules/: ext-crate-references.md  kiro-spec.mdc  kiro-tasks.mdc
crates/presenter/.kiro/specs/aseprite-presenter-bridge/: design.md  requirements.md  tasks.md
crates/presenter/.kiro/steering/: logging-standards.md
crates/presenter/crates/bridge/: Cargo.toml
crates/presenter/crates/bridge/src/: lib.rs  parser.rs  server.rs
crates/presenter/examples/: image_display.rs  presentation_sequence.rs  resolution_test.rs
crates/presenter/shaders/: image-adjustment.slang  ntsc-320px-composite.slangp  ntsc-composite.slangp  tvout+ntsc-2phase-composite.slangp
crates/presenter/src/: embedded_shaders.rs  lib.rs  main.rs  renderer.rs
crates/presenter/src/examples_common/: app.rs  gpu.rs  mod.rs
crates/presenter/tests/: gpu_property_tests.proptest-regressions  gpu_property_tests.rs  image_display_integration_test.rs  presentation_sequence_integration_test.rs  resolution_test_integration_test.rs
docs/: audio_engine_tdd.html  audio_engine_tdd.typ  style.css
examples/: ntsc_bench.rs
specs/001-world-object-model-render-assembly/: tasks.md
src/: app.rs  clock.rs  font.rs  gpu_renderer.rs  gpu_renderer_blit.wgsl  gpu_renderer_ntsc_encode.wgsl  gpu_renderer_scene.wgsl  input.rs  level.rs  main.rs  map.rs  model.rs  render_assembly.rs  renderer.rs  runtime.rs  server_runner.rs  simulation.rs  text_layer.rs  texture.rs  transport.rs
src/net/: ack_tracker.rs  bot.rs  channel_controller.rs  client.rs  local_controller.rs  mod.rs  reliable.rs  server.rs  tcp.rs  udp.rs
src/net/bots/: mod.rs  wandering.rs  waypoint.rs
src/renderer/: animation.rs  atlas.rs  gpu_renderer_ntsc_decode.wgsl  gpu_renderer_scene.wgsl  mesh.rs  mod.rs  scene_renderer.rs  sky.wgsl  uniforms.rs
textures/: level.amap  png-to-amap.py
