[package]
name = "cpu-game"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
palette = "0.7.6"
image = "0.25.10"
include_dir = "0.7"
wgpu = "27"
pollster = "0.4"
bytemuck = { version = "1.24", features = ["derive"] }
glam = "0.30"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
strip = false
opt-level = 3
