[package]
name = "cpu-presenter"
version = "0.1.0"
edition = "2024"

[lib]
name = "shader_test"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
engine-core = { path = "../engine-core" }
num-traits = "0.2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
wgpu = "27"

[profile.release]
debug = true