[package]
name = "presenter"
version = "0.1.0"
edition = "2021"

[lib]
name = "shader_test"
path = "src/lib.rs"

[features]
default = ["embedded-shaders"]
embedded-shaders = []

[build-dependencies]
# Shader processing for build-time packing
librashader = { version = "0.9", features = ["runtime-wgpu", "stable"] }
# Shader packing for embedding
librashader-pack = { version = "0.9", features = ["serde"] }
# MessagePack serialization
rmp-serde = "1.3"
# Error handling in build script
anyhow = "1.0"

[dependencies]
# GPU
wgpu = "27" # Using 27 due to librashader dependency matching
# Shader processing
librashader = { version = "0.9", features = ["runtime-wgpu", "stable"] }
# Shader packing for runtime deserialization
librashader-pack = { version = "0.9", features = ["serde"] }
# MessagePack serialization
rmp-serde = "1.3"
# Error handling
anyhow = "1.0"
# Shared types
engine-core = { path = "../engine-core" }

[dev-dependencies]
winit = "0.30"
pollster = "0.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Maximum optimization
strip = true        # Strip symbols
panic = "abort"     # No unwinding code

[profile.release.package."*"]
opt-level = "z"     # Also optimize dependencies for size
