[package]
name = "bridge"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
anyhow = "1.0"
engine-core = { path = "../engine-core" }
futures = "0.3"
tracing.workspace = true

[dev-dependencies]
proptest = "1.0"